test user has friends. Fixed alignment for book elems on index

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -41,7 +41,7 @@
 }
 .box {
 	background-color: grey;
-	width: 300px;
+	width: 80%;
 	height: 375px;
 }
 .content{
@@ -53,20 +53,19 @@
 
 }
 .info {
-	margin-top: 1em;
+	margin-top: 0.25em;
 	width: 80%;
 	height: 6em;
+	text-align: center;
 }
 
 .title {
-	float: left;
 	color: white;
 	font-size: 16px;
 	font-weight: 600;
 }
 
 .author {
-	float: left;
 	color: white;
 }
 
